css/main.css
/* ... */
.counters .facts-item .fact-count h4 {
  font-size: 15px;
  color: #fff;
  margin-bottom: 0;
}

.counter-item {
  text-align: center;
  padding: 30px;
  background: #f9f9f9;
  border: 1px solid #eaeaea;
  margin: 15px 0;
}

.counter-item .icon {
  margin-bottom: 20px;
}

.counter-item .icon i {
  font-size: 40px;
  color: #85C448;
}

.counter-item .fact-count h3 {
  font-size: 50px;
  font-weight: 500;
  line-height: 60px;
}

.counter-item .fact-count h4 {
  font-size: 18px;
  margin-bottom: 0;
}

/* ==========================================================================
 Custom styles by DH - The Web Lab
 ========================================================================== */

.carousel-item img {
  opacity: 0.4;
}

